--- a/README.nd
+++ b/README.nd
@@ -1,391 +1,34 @@
-# 🎮 Game Library API
+1. JWT Secret
+bash
+# Generate a strong JWT secret (run in terminal)
+node -e "console.log(require('crypto').randomBytes(64).toString('hex'))"
 
-A comprehensive RESTful API for managing video games and reviews, built with Express.js and MongoDB.
+# or using openssl
+openssl rand -base64 64
+2. Google OAuth Credentials
+Steps to get Google Client ID and Secret:
 
-## 📋 Table of Contents
-- [Features](#features)
-- [Project Structure](#project-structure)
-- [Setup Instructions](#setup-instructions)
-- [MongoDB Setup](#mongodb-setup)
-- [Running Locally](#running-locally)
-- [API Endpoints](#api-endpoints)
-- [Testing the API](#testing-the-api)
-- [Deployment to Render](#deployment-to-render)
-- [Week 04 (OAuth)](#week-04-oauth)
+Go to Google Cloud Console
 
-## ✨ Features
+Create a new project or select existing one
 
-- ✅ Two MongoDB collections (Games & Reviews)
-- ✅ Complete CRUD operations (Create, Read, Update, Delete)
-- ✅ Input validation on all routes
-- ✅ Comprehensive error handling
-- ✅ Professional API documentation with interactive testing
-- ✅ Beautiful UI with Red, Gold, Silver, Blue, Yellow color scheme
-- ✅ Ready for OAuth integration (Week 04)
+Enable the Google+ API
 
-## 📁 Project Structure
+Go to "Credentials" in the sidebar
 
-```
-cse341-project2/
-├── controllers/
-│   ├── games.js          # Game business logic
-│   └── reviews.js        # Review business logic
-├── routes/
-│   ├── index.js          # Main router
-│   ├── games.js          # Game routes
-│   └── reviews.js        # Review routes
-├── db/
-│   └── connect.js        # MongoDB connection
-├── middleware/
-│   └── validate.js       # Validation middleware
-├── public/
-│   ├── index.html        # API documentation page
-│   ├── style.css         # Styling
-│   └── script.js         # Interactive testing
-├── .env                  # Environment variables (DO NOT COMMIT)
-├── .gitignore           # Git ignore file
-├── server.js            # Main application file
-└── package.json         # Dependencies
-```
+Click "Create Credentials" → "OAuth 2.0 Client ID"
 
-## 🚀 Setup Instructions
+Configure consent screen if first time
 
-### Prerequisites
-- Node.js (v14 or higher)
-- MongoDB Atlas account
-- Git
-- Code editor (VS Code recommended)
+Choose application type (Web application)
 
-### Step 1: Clone or Create Project
+Add authorized redirect URIs:
 
-```bash
-# Create project directory
-mkdir game-library-api
-cd game-library-api
+For development: http://localhost:3000/auth/google/callback
 
-# Initialize Git
-git init
+For production: https://yourdomain.com/auth/google/callback
 
-# Initialize Node project
-npm init -y
-```
+Copy the Client ID and Client Secret
 
-### Step 2: Install Dependencies
-
-```bash
-npm install express mongodb dotenv cors validator
-npm install --save-dev nodemon
-```
-
-### Step 3: Create Project Files
-
-Create all the files as shown in the project structure above. Copy the code provided for each file.
-
-## 🗄️ MongoDB Setup
-
-### Step 1: Create MongoDB Atlas Account
-1. Go to [MongoDB Atlas](https://www.mongodb.com/cloud/atlas)
-2. Sign up for a free account
-3. Create a new cluster (select FREE tier)
-
-### Step 2: Configure Database Access
-1. Click "Database Access" in left sidebar
-2. Click "Add New Database User"
-3. Create username and password (save these!)
-4. Select "Read and write to any database"
-
-### Step 3: Configure Network Access
-1. Click "Network Access" in left sidebar
-2. Click "Add IP Address"
-3. Click "Allow Access from Anywhere" (for development)
-4. Confirm
-
-### Step 4: Get Connection String
-1. Click "Database" in left sidebar
-2. Click "Connect" on your cluster
-3. Select "Connect your application"
-4. Copy the connection string
-5. Replace `<password>` with your database password
-6. Replace `<dbname>` with `gameLibraryDB`
-
-### Step 5: Create .env File
-
-Create a `.env` file in the root directory:
-
-```env
-MONGODB_URI=mongodb+srv://yourusername:yourpassword@cluster.mongodb.net/gameLibraryDB?retryWrites=true&w=majority
-PORT=3000
-NODE_ENV=development
-```
-
-⚠️ **IMPORTANT**: Never commit your `.env` file to Git!
-
-## 💻 Running Locally
-
-### Start the Server
-
-```bash
-# Development mode (auto-restart on changes)
-npm run dev
-
-# Production mode
-npm start
-```
-
-You should see:
-```
-✅ MongoDB Connected Successfully
-🚀 Server running on port 3000
-📚 API Documentation: http://localhost:3000
-```
-
-### Access the API
-- **Documentation**: http://localhost:3000
-- **API Base URL**: http://localhost:3000/api
-
-## 📡 API Endpoints
-
-### Games Collection (7 fields)
-
-| Method | Endpoint | Description |
-|--------|----------|-------------|
-| GET | `/api/games` | Get all games |
-| GET | `/api/games/:id` | Get game by ID |
-| POST | `/api/games` | Create new game |
-| PUT | `/api/games/:id` | Update game |
-| DELETE | `/api/games/:id` | Delete game |
-
-**Game Fields:**
-- `title` (String, required) - max 200 chars
-- `genre` (String, required)
-- `platform` (String, required)
-- `releaseYear` (Number, required) - 1950 to current+2
-- `publisher` (String, required)
-- `rating` (Number, optional) - 0 to 10
-- `description` (String, optional) - max 1000 chars
-
-### Reviews Collection
-
-| Method | Endpoint | Description |
-|--------|----------|-------------|
-| GET | `/api/reviews` | Get all reviews |
-| GET | `/api/reviews/game/:gameId` | Get reviews by game |
-| GET | `/api/reviews/:id` | Get review by ID |
-| POST | `/api/reviews` | Create new review |
-| PUT | `/api/reviews/:id` | Update review |
-| DELETE | `/api/reviews/:id` | Delete review |
-
-**Review Fields:**
-- `gameId` (String, required) - Referenced game ObjectId
-- `reviewerName` (String, required) - max 100 chars
-- `rating` (Number, required) - 1 to 5
-- `comment` (String, required) - 10-500 chars
-
-## 🧪 Testing the API
-
-### Using the Built-in Test Console
-
-1. Open http://localhost:3000
-2. Click "Test Endpoint" buttons
-3. View results in the test console
-
-### Using Postman or Thunder Client
-
-#### Create a Game (POST)
-```
-POST http://localhost:3000/api/games
-Content-Type: application/json
-
-{
-  "title": "Elden Ring",
-  "genre": "Action RPG",
-  "platform": "PlayStation 5",
-  "releaseYear": 2022,
-  "publisher": "Bandai Namco",
-  "rating": 9.2,
-  "description": "An epic dark fantasy action RPG"
-}
-```
-
-#### Get All Games (GET)
-```
-GET http://localhost:3000/api/games
-```
-
-#### Update a Game (PUT)
-```
-PUT http://localhost:3000/api/games/YOUR_GAME_ID
-Content-Type: application/json
-
-{
-  "title": "Elden Ring: Shadow of the Erdtree",
-  "genre": "Action RPG",
-  "platform": "PlayStation 5",
-  "releaseYear": 2024,
-  "publisher": "Bandai Namco",
-  "rating": 9.5,
-  "description": "The DLC expansion with new content"
-}
-```
-
-#### Delete a Game (DELETE)
-```
-DELETE http://localhost:3000/api/games/YOUR_GAME_ID
-```
-
-### Testing Validation
-
-Try these to see validation in action:
-
-**Missing required fields:**
-```json
-{
-  "title": "Test Game"
-}
-```
-Expected: 400 error with validation messages
-
-**Invalid rating:**
-```json
-{
-  "title": "Test Game",
-  "genre": "RPG",
-  "platform": "PC",
-  "releaseYear": 2024,
-  "publisher": "Test",
-  "rating": 15
-}
-```
-Expected: 400 error "Rating must be between 0 and 10"
-
-## 🌐 Deployment to Render
-
-### Step 1: Push to GitHub
-
-```bash
-# Create repository on GitHub first, then:
-git add .
-git commit -m "Initial commit - Game Library API"
-git branch -M main
-git remote add origin https://github.com/yourusername/game-library-api.git
-git push -u origin main
-```
-
-### Step 2: Create Render Account
-1. Go to [Render.com](https://render.com)
-2. Sign up with your GitHub account
-
-### Step 3: Create New Web Service
-1. Click "New +" → "Web Service"
-2. Connect your GitHub repository
-3. Configure:
-   - **Name**: game-library-api
-   - **Environment**: Node
-   - **Build Command**: `npm install`
-   - **Start Command**: `npm start`
-
-### Step 4: Add Environment Variables
-1. Scroll to "Environment Variables"
-2. Add:
-   - `MONGODB_URI` = your MongoDB connection string
-   - `NODE_ENV` = production
-
-### Step 5: Deploy
-1. Click "Create Web Service"
-2. Wait for deployment (5-10 minutes)
-3. Your API will be live at: `https://your-app-name.onrender.com`
-
-### Step 6: Test Production API
-- Visit your Render URL
-- Test endpoints using the documentation page
-
-## 📝 Week 04 (OAuth)
-
-For next week, you'll add OAuth authentication:
-- Install `passport` and `passport-google-oauth20`
-- Protect routes with authentication middleware
-- Add user sessions
-- Update documentation
-
-The current structure is ready for OAuth integration!
-
-## 🎥 Creating Your Video
-
-Record a 5-8 minute video covering:
-1. **Introduction** (30 sec)
-   - Project overview
-   - Show GitHub repository
-
-2. **Code Walkthrough** (2-3 min)
-   - Explain project structure
-   - Show validation middleware
-   - Demonstrate error handling
-   - Explain MongoDB connection
-
-3. **Live Demo** (2-3 min)
-   - Show running application locally
-   - Test all CRUD operations
-   - Show validation errors
-   - Test with MongoDB Compass
-
-4. **Deployment** (1-2 min)
-   - Show Render deployment
-   - Test production API
-   - Show environment variables
-
-5. **Wrap-up** (30 sec)
-   - Summary of requirements met
-   - Show GitHub and Render links
-
-## 📦 Submission Checklist
-
-- [ ] GitHub repository with all code
-- [ ] `.env` file in `.gitignore`
-- [ ] MongoDB connection working
-- [ ] All CRUD operations functional
-- [ ] Validation on all routes
-- [ ] Error handling implemented
-- [ ] API documentation complete
-- [ ] Deployed to Render
-- [ ] 5-8 minute YouTube video
-- [ ] Submit GitHub, Render, and YouTube links
-
-## 🐛 Troubleshooting
-
-### MongoDB Connection Issues
-- Check your connection string
-- Verify IP whitelist in MongoDB Atlas
-- Ensure password doesn't contain special characters (URL encode if needed)
-
-### Port Already in Use
-```bash
-# Kill process on port 3000
-killall node
-```
-
-### Render Deployment Fails
-- Check build logs in Render dashboard
-- Verify environment variables are set
-- Ensure `package.json` has correct start script
-
-## 📚 Resources
-
-- [Express.js Documentation](https://expressjs.com/)
-- [MongoDB Node Driver](https://mongodb.github.io/node-mongodb-native/)
-- [Render Deployment Guide](https://render.com/docs/deploy-node-express-app)
-
-## 🎨 Color Scheme
-
-- **Red**: #DC143C
-- **Gold**: #FFD700
-- **Silver**: #C0C0C0
-- **Blue**: #1E90FF
-- **Yellow**: #FFEB3B
-
-## 📄 License
-
-MIT License - Feel free to use this project for your coursework!
-
----
-
-**Good luck with your project! 🚀**
+3. Session Secret
+bash
